# slicersim

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  contents.rst  index.rst  notebooks.rst
docs/api/: index.rst  slicersim.detector.rst  slicersim.extra.calspec.rst  slicersim.extra.rst  slicersim.iotools.rst  slicersim.lazuli.rst  slicersim.mapper.rst  slicersim.profiles.rst  slicersim.rst  slicersim.sample.rst  slicersim.scene.background.rst  slicersim.scene.base.rst  slicersim.scene.extra.calspec.rst  slicersim.scene.extra.rst  slicersim.scene.host.rst  slicersim.scene.pointsource.rst  slicersim.scene.rst  slicersim.scene.scene.rst  slicersim.simulation.rst  slicersim.spectrograph.rst  slicersim.target.rst  slicersim.telescope.rst  slicersim.thermal.rst  slicersim.utils.rst
docs/notebooks/: advanced_access_qe_spectral_resolution_etc.ipynb  advanced_change_detector_and_spectrograph.ipynb  advanced_change_resolution_dispersion.ipynb  advanced_dispersion_resolution_and_spotsize.ipynb  advanced_scene_tutorial.ipynb  beginner_ETC_lazulitarget.ipynb  (+11 more)
slicersim/: __init__.py  detector.py  iotools.py  lazuli.py  mapper.py  mirrors.py  nea.py  profiles.py  scene.py  simulation.py  spectrograph.py  study.py  target.py  telescope.py  thermal.py  utils.py
tests/: conftest.py  test_detector.py  test_mapper.py  test_profiles.py  test_sample.py  test_scene.py  test_simulation.py  test_spectrograph.py  test_target.py  test_telescope.py  test_thermal.py  test_throughut.py  test_utils.py
(+73 files in other folders)
