[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slicersim"
dynamic = ["version"]
description = "Simulating Transient in the sky and how to observe them"
readme = "README.md"
authors = [
    {name = "Mickael Rigault", email = "m.rigault@ipnl.in2p3.fr"}
]
license = {text = "Apache Software License"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["astronomy", "astrophysics"]
requires-python = ">=3.8"
dependencies = [
    'importlib_resources; python_version < "3.10"',
    "numpy",
    "pandas",
    "scipy",
    "astropy",
    "sncosmo",
    "extinction",
]

[project.optional-dependencies]
docs = ["nbsphinx"]
tests = ["pytest", "coverage"]

[project.urls]
Homepage = "https://github.com/MickaelRigault/slicersim"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
slicersim = ["config/*"]

[tool.sphinx]
source-dir = "docs/"
build-dir = "docs/_build"
all_files = true

[tool.setuptools.dynamic]
version = {attr = "slicersim.__version__"}